Overflow bug

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   font-weight: 400;
   color: #033616;
   background-color: #bbeddd;
+  overflow: hidden;
 }
 main {
   display: flex;
